--- a/src/assets/componentStyles/SongBox.scss
+++ b/src/assets/componentStyles/SongBox.scss
@@ -94,7 +94,8 @@
   .song-container {
       gap: 8px;
       padding: 8px;
-      width: calc(3*100%);
+      width: calc(3.2*100%);
+      margin: auto 5%;
 
       .artist-profile {
           margin-right: 8px;
